2007-07-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarp/libYARP_OS/include/yarp.McastCarrier.h,
	  src/yarp/libYARP_OS/include/yarp.DgramTwoWayStream.h,
	  src/yarp/libYARP_OS/include/yarp.DgramTwoWayStream.cpp:
	By default restrict multicast operation to specific network 
	interfaces.  A connection like:
	  yarp connect /port/1 /net=10.0.0/port/2 mcast
	will establish a multicast connection between ports
	/port/1 and /port/2, with network interfaces chosen
	to prefer IP address prefixes of 10.0.0.  
	
	* src/yarp/libYARP_OS/src/Module.cpp, 
	  src/yarp/libYARP_dev/src/Drivers.cpp:
	Added SIGTERM handler, equal to SIGINT, for modules and drivers.

2007-07-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarp/libYARP_OS/src/Property.cpp: the inevitable addition
	of "include" mechanism to configuration files.
	   [include "filename.ini"]
	includes the given file.
	   [include subname "filename.ini"]
	includes the given file within a subsection called "subname".

2007-07-16  Alessandro Scalzo <alessandro@liralab.it>
	* src/yarp/libYARP_OS/include/yarp/os/Run.h
	* src/yarp/libYARP_OS/src/Run.cpp
	New version, supports run & kill commands,
	.sh and .bat scripts, redirect stdin and 
	stdout to yarp ports. 

2007-07-06  Alessandro Scalzo <alessandro@liralab.it>
	* src/yarp/libYARP_OS/include/yarp/os/Run.h
	* src/yarp/libYARP_OS/src/Run.cpp
	New version, supports run & kill processes
	on both unix and win32. Does not support
	IO (by now).
	
2007-06-27  Jonas Ruesch  <ruesch@ifi.uzh.ch>

	* example/swig/yarp.i:
    support for ImageOf<PixelFloat> added.
    * example/swig/src/YarpImageHelper.java
    method get2DMatrix(ImageFloat img) added. 

2007-06-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/CmakeLists.txt, conf/YarpReqLib.cmake, src/yarp-framegrabbergui: 
	removed GtkMM dependency

2007-07-04  Lorenzo Natale <nat@liralab.it>

	* conf/CMakeLists.txt
	* conf/YARPCompileModules.txt
	* src/yarpdev/CMakeLists.txt