@@ -1,3 +1,8 @@
+2007-07-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Companion.cpp: more information when
+	"yarp where" fails, about what you can actually do to fix things.
+
 2007-07-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/yarp/libYARP_OS/include/yarp.McastCarrier.h,
